--- a/personality-viz.html
+++ b/personality-viz.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <div class="test active">
-    <h1>pick your type</h1>
+    <h1>hey, pick your type</h1>
 
     <div class = "question">
       <span class="question ei">
